--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,11 @@
     </plugins>
   </build>
   <dependencies>
-  	<dependency>
-  		<groupId>postgresql</groupId>
-  		<artifactId>postgresql</artifactId>
-  		<version>9.1-901.jdbc4</version>
-  	</dependency>	
+<dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>42.3.1</version>
+</dependency>
 
   	<dependency>
   		<groupId>org.springframework</groupId>
